[project]
authors = [
    {name = "Ryan Seeley", email = "ryseeley@gmail.com"},
]
keywords = [
    "api",
    "rest",
    "asgi",
    "litestar",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
name = "litestar-hello-world"
version = "0.1.0"
description = "litestar-hello-world is a minimal implementation of a Litestar application."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<4.0"
dependencies = [
    "litestar[standard]>=2.0.1",
    "advanced-alchemy>=0.5.1",
]

[project.urls]
"Issue Tracker" = "https://github.com/litestar-org/litestar-hello-world/issues?q=is%3Aissue+is%3Aopen+sort%3Aupdated-desc"
Changelog = "https://github.com/litestar-org/litestar-hello-world/releases/"
Twitter = "https://twitter.com/LitestarAPI"
Reddit = "https://www.reddit.com/r/litestarapi"
Discord = "https://discord.gg/MmcwxztmQb"
Blog = "https://blog.litestar.dev"
homepage = "https://litestar.dev/"
repository = "https://github.com/litestar-org/litestar-hello-world"
documentation = "https://docs.litestar.dev/"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.scripts]
app = "litestar.__main__:run_cli"

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
test = "pytest"
docs-serve = "sphinx-autobuild docs docs/_build/ -j auto --watch src --watch docs --watch tests --port 8002"
ci = {composite = ["lint", "test"]}

[tool.pdm.dev-dependencies]
docs = [
    "sphinx>=7.1.2",
    "sphinx-autobuild>=2021.3.14",
    "black>=23.9.1",
    "httpx>=0.25.0",
    "auto-pytabs[sphinx]>=0.4.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-toolbox>=3.5.0",
    "blacken-docs>=1.16.0",
    "sphinx-design>=0.5.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "uvicorn>=0.23.2",
    "litestar-sphinx-theme @ git+https://github.com/litestar-org/litestar-sphinx-theme.git",
]
lint = [
    "black>=23.9.1",
    "ruff>=0.1.3",
    "codespell>=2.2.5",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
    "blacken-docs>=1.16.0",
    "shellcheck-py>=0.9.0.5",
    "pyright>=1.1.327",
    "sourcery>=1.9.0",
]
test = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.codespell]
ignore-words-list = "selectin"
skip = 'pdm.lock'

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
    'raise NotImplementedError',
]

[tool.pytest.ini_options]
# addopts = "--ignore=examples"
asyncio_mode = "auto"

[tool.pyright]
include = ["src"]
exclude = ["tools"]

[tool.slotscheck]
strict-imports = false

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
show_error_codes = true

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  '__pycache__',
  "src/app/lib/db/migrations/versions/*.py",
]
fix = true
unsafe-fixes = true
ignore = [
  "E501", # pycodestyle line too long, handled by black
  "D100", # pydocstyle - missing docstring in public module
  "D101", # pydocstyle - missing docstring in public class
  "D102", # pydocstyle - missing docstring in public method
  "D103", # pydocstyle - missing docstring in public function
  "D104", # pydocstyle - missing docstring in public package
  "D105", # pydocstyle - missing docstring in magic method
  "D106", # pydocstyle - missing docstring in public nested class
  "D107", # pydocstyle - missing docstring in __init__
  "D202", # pydocstyle - no blank lines allowed after function docstring
  "D205", # pydocstyle - 1 blank line required between summary line and description
  "D415", # pydocstyle - first line should end with a period, question mark, or exclamation point
  "UP037", # pyupgrade - removes quotes from type annotation
  "A003", # flake8-builtins - class attribute {name} is shadowing a python builtin
  "B010", # flake8-bugbear - do not call setattr with a constant attribute value
  "B008", #  flake8-bugbear - Do not perform function call `Parameter` in argument defaultsRuff(B008)
  "RUF012", # ruff - mutable class attributes should be annotated with `typing.ClassVar`
  "ANN401", # ruff - Dynamically typed expressions (typing.Any) are disallowed
  "ANN102",
  "ANN101", # ruff - Missing type annotation for `self` in method
  "PLR0913", # ruff - Too many arguments to function call
  "PLR2004", # Magic value used in comparison
  "FBT001", # Boolean typed positional argument in function definition
  "FBT002", # Boolean default positional argument in function definition
  "FBT003", # Boolean Boolean default positional argument in function definition
  "ARG002", # Unused method argument
  "ARG001", #  Unused function argument
  "TD002",
  "TD003",
  "FIX002",
  "PGH003",
  "RUF006",
  "SLF001",
  "PT007",
  'PT004',
  'PT005',
  'S603',
  "E501", # pycodestyle line too long, handled by black
  "PLW2901", # pylint - for loop variable overwritten by assignment target
  "ANN401",
  "ANN102",
  "ANN101",
  "FBT",
  "PLR0913", # too many arguments
  "PT",
  "TD",
  "PERF203", # ignore for now; investigate
  "Q",
  "ERA001",
]
line-length = 120
select = ["ALL"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
src = ["src", "tests/"]
target-version = "py311"

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 12

[tool.ruff.pep8-naming]
classmethod-decorators = [
    "classmethod",
]

[tool.ruff.isort]
known-first-party = ["litestar", "tests", "examples"]

[tool.ruff.per-file-ignores]
"tests/**/*.*" = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C901",
    "D",
    "DTZ",
    "EM",
    "FBT",
    "G",
    "N",
    "PGH",
    "PIE",
    "PLR",
    "PLW",
    "PTH",
    "RSE",
    "S",
    "S101",
    "SIM",
    "TCH",
    "TRY",
]
"docs/examples/tests/**/*.*" = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C901",
    "D",
    "DTZ",
    "EM",
    "FBT",
    "G",
    "N",
    "PGH",
    "PIE",
    "PLR",
    "PLW",
    "PTH",
    "RSE",
    "S",
    "S101",
    "SIM",
    "TCH",
    "TRY",
]
"docs/**/*.*" = ["S", "B", "DTZ", "A", "TCH", "ERA", "D", "RET", "INP", "ARG", "TD", "FIX"]
"tools/**/*.*" = ["D", "ARG", "EM", "TRY", "G", "FBT", "ANN"]
